# Cadastro

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yaml
assets/: edit.html  home.css  index.html  main.js  new.html
clients/person-client-go/: main.go
clients/person-client-go/controller/: controller.go
clients/person-client-go/model/: person.go
clients/person-client-go/routes/: routes.go
clients/person-client-go/templates/: _head.html  _menu.html  edit.html  index.html  new.html
clients/person-client-gtk/: CMakeLists.txt
clients/person-client-gtk/config/: config.ini
clients/person-client-gtk/src/: main.c
clients/person-client-gtk/src/client/: person_client_events_base.h  person_client_gtk.c  person_client_gtk.h
clients/person-client-gtk/src/client/curl/: curl_request.c  curl_request.h
clients/person-client-gtk/src/client/deserializer/: deserializer.c  deserializer.h
clients/person-client-gtk/src/client/domain/: person.c  person.h
clients/person-client-gtk/src/client/serializer/: serializer.c  serializer.h
clients/person-client-gtk/src/client/view/: view_base.h
clients/person-client-gtk/src/client/view/editdialog/: edit_dialog.h
clients/person-client-gtk/src/client/view/insertdialog/: insert_dialog.h
clients/person-client-gtk/src/client/view/mainwindow/: main_window.c  main_window.h
clients/person-client-gtk/src/config/: configuration.c  configuration.h
clients/person-client-java/: .project  pom.xml
clients/person-client-java/src/main/java/br/com/solid/: Main.java
clients/person-client-java/src/main/java/br/com/solid/config/: IConfig.java  PersonClientProperties.java
clients/person-client-java/src/main/java/br/com/solid/controller/: Controller.java  IController.java  IView.java  PersonDTO.java  PersonTableModel.java
clients/person-client-java/src/main/java/br/com/solid/domain/: Person.java  Persons.java
clients/person-client-java/src/main/java/br/com/solid/view/: AddView.java  EditView.java  PersonView.java  View.java
clients/person-client-react/: package-lock.json  package.json
clients/person-client-react/public/: index.html
clients/person-client-react/src/: App.css  App.js  Formulario.js  Tabela.js
config/: config.ini
docker-scripties/: build_env.sh  connect_env.sh  start_env.sh  stop_env.sh
docs/: cadastro.drawio
docs/mvc_files/: api.js  cbgapi.loaded_0  extensions.js  stencils.js
include/: application.h  database.h  menu.h  person.h  repository.h  repository_factory.h  use_cases.h  view_base.h  view_factory.h
resources/: edit_window.glade  insert_window.glade  window.glade  window.glade~
src/: application.c  database.c  main.c  menu.c  person.c
src/adapters/controllers/: person_controller_base.h  person_controller_factory.c  person_controller_factory.h
src/adapters/controllers/cli_controller/: person_controller_cli.c  person_controller_cli.h
src/adapters/controllers/cli_controller/cli/: cli.c  cli.h
src/adapters/controllers/gtk_controller/: person_controller_events_base.h  person_controller_gtk.c  person_controller_gtk.h
src/adapters/controllers/gtk_controller/view/: gtk_view.c  gtk_view.h  view_base.h
src/adapters/controllers/gtk_controller/view/editdialog/: edit_dialog.c  edit_dialog.h
src/adapters/controllers/gtk_controller/view/insertdialog/: insert_dialog.c  insert_dialog.h
src/adapters/controllers/gtk_controller/view/mainwindow/: main_window.c  main_window.h
src/adapters/controllers/webserver_controller/: person_controller_webserver.c  person_controller_webserver.h
src/adapters/controllers/webserver_controller/handlers/: handler_delete.c  handler_get.c  handler_index.c  handler_post.c  handler_put.c  handler_version.c  handlers.c  handlers.h
src/adapters/controllers/webserver_controller/webserver/: webserver.c  webserver.h
src/adapters/repositories/: person_repository_factory.c  person_repository_factory.h
src/adapters/repositories/file/: person_repository_file.c  person_repository_file.h
src/adapters/repositories/sqlite/: person_repository_sqlite.c  person_repository_sqlite.h
src/config/: configuration.c  configuration.h
src/domain/model/: person.c  person.h
src/domain/ports/: person_repository_base.h  person_service_base.h
src/domain/services/: person_service.c  person_service.h
src/repository/: repository.c  repository_factory.c
src/repository/file/: file_database.c  file_database.h
src/repository/sqlite/: sqlite_database.c  sqlite_database.h
src/use_cases/: person_add.c  person_delete.c  person_find.c  person_list.c  person_quit.c  person_update.c
src/view/: view_factory.c
src/view/cli/: cli.c  cli.h
src/view/gtk/: gtk.h
